[tool.poetry]
name = "innertube"
version = "1.0.10"
description = "Python Client for Google's Private InnerTube API. Works with Youtube, YouTubeMusic etc."
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tombulled/innertube"
repository = "https://github.com/tombulled/innertube"
keywords = ["youtube", "innertube", "python", "api"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.3"
requests = "^2.25.1"
addict = "^2.4.0"
furl = "^2.1.0"
parse = "^1.19.0"
attrs = "^21.2.0"
soset = "^0.1.0"
enumb = "^0.1.5"
mediatype = "^0.1.5"
ua = "^0.1.5"
roster = "^0.1.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.941"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
