[tool.poetry]
name = "innertube"
version = "2.0.1"
description = "Python Client for Google's Private InnerTube API. Works with Youtube, YouTube Music and more!"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://pypi.org/project/innertube/"
repository = "https://github.com/tombulled/innertube"
keywords = ["innertube", "youtube", "youtubei", "python", "api", "client"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"
mediate = "^0.1.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.941"
pytest = "^7.1.1"
Flask = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true